[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/screens/credits_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto/roboto_font_xxs.tres" type="DynamicFont" id=2]
[ext_resource path="res://default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/Roboto/roboto_font_s.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/Roboto/roboto_font_xs.tres" type="DynamicFont" id=5]

[node name="CreditsScreen" type="PanelContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 30.0
margin_top = 32.0
margin_right = 289.0
margin_bottom = 148.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 259.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 4 )
text = "Thanks for playing!"
align = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 259.0
margin_bottom = 46.0
rect_min_size = Vector2( 0, 20 )

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 259.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "Credits:"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 259.0
margin_bottom = 116.0

[node name="Diego" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 259.0
margin_bottom = 9.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Diego"]
margin_right = 80.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Diego Gonzalez"

[node name="Dash" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Diego"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 9.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Role" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Diego"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Programming"
align = 1

[node name="Dash2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Diego"]
margin_left = 172.0
margin_right = 193.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Link" type="LinkButton" parent="CenterContainer/VBoxContainer/VBoxContainer/Diego"]
margin_left = 197.0
margin_right = 259.0
margin_bottom = 9.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "drgvdg.itch.io"

[node name="Levi" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 259.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Levi"]
margin_right = 80.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Levi Lindsey"

[node name="Dash" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Levi"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 9.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Role" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Levi"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Programming"
align = 1

[node name="Dash2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Levi"]
margin_left = 172.0
margin_right = 222.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Link" type="LinkButton" parent="CenterContainer/VBoxContainer/VBoxContainer/Levi"]
margin_left = 226.0
margin_right = 259.0
margin_bottom = 9.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "levi.dev"

[node name="Daisy" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 259.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Daisy"]
margin_right = 80.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Daisy Muradyan"

[node name="Dash" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Daisy"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 9.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Role" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Daisy"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Art"
align = 1

[node name="Dash2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Daisy"]
margin_left = 172.0
margin_right = 172.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Link" type="LinkButton" parent="CenterContainer/VBoxContainer/VBoxContainer/Daisy"]
margin_left = 176.0
margin_right = 259.0
margin_bottom = 9.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "ladychamomile.ink"

[node name="Zaven" type="HBoxContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 259.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Zaven"]
margin_right = 80.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Zaven Muradyan"

[node name="Dash" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Zaven"]
margin_left = 84.0
margin_right = 84.0
margin_bottom = 9.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Role" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Zaven"]
margin_left = 88.0
margin_right = 168.0
margin_bottom = 9.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Programming"
align = 1

[node name="Dash2" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/Zaven"]
margin_left = 172.0
margin_right = 211.0
margin_bottom = 9.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Link" type="LinkButton" parent="CenterContainer/VBoxContainer/VBoxContainer/Zaven"]
margin_left = 215.0
margin_right = 259.0
margin_bottom = 9.0
focus_mode = 2
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 2 )
text = "voithos.io"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Diego/Link" to="." method="_on_DiegoLink_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Levi/Link" to="." method="_on_LeviLink_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Daisy/Link" to="." method="_on_DaisyLink_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/Zaven/Link" to="." method="_on_ZavenLink_pressed"]
